--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="hero-text">
       <div class="greeting">HELLO</div>
       <h1>I'M <span>MUSTAFA ELATTAR</span></h1>
-      <div class="typed-title">I AM AN <span id="typed-text"></span></div>
+      <div class="typed-title">I AM <span id="typed-text"></span></div>
       <div class="description">
         I’m a researcher, professor, and entrepreneur working at the intersection of Artificial Intelligence and Healthcare. 
         I specialize in developing AI-powered solutions for medical imaging, clinical decision support, and personalized health technologies.        
