--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="hero-text">
       <div class="greeting">HELLO</div>
       <h1>I'M <span>MUSTAFA ELATTAR</span></h1>
-      <div class="typed-title">I AM <span id="typed-text"></span></div>
+      <div class="typed-title">I AM AN <span id="typed-text"></span></div>
       <div class="description">
         I’m a researcher, professor, and entrepreneur working at the intersection of Artificial Intelligence and Healthcare. 
         I specialize in developing AI-powered solutions for medical imaging, clinical decision support, and personalized health technologies.        
@@ -233,7 +233,7 @@
       <div class="description">
         On this site, you’ll find my projects, publications, and the latest tools I’m building to transform healthcare through intelligent systems.        
       </div>
-      <a href="#portfolio" class="portfolio-btn">
+      <a href="experience.html" class="portfolio-btn">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 6h-4V4a2 2 0 0 0-2-2H10a2 2 0 0 0-2 2v2H4c-1.1 0-2 .9-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8c0-1.1-.9-2-2-2zM10 4h4v2h-4V4zm10 16H4V8h16v12z"/></svg>
         PORTFOLIO
       </a>
