--- a/index.html
+++ b/index.html
@@ -233,10 +233,22 @@
       <div class="description">
         On this site, you’ll find my projects, publications, and the latest tools I’m building to transform healthcare through intelligent systems.        
       </div>
-      <a href="experience.html" class="portfolio-btn">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 6h-4V4a2 2 0 0 0-2-2H10a2 2 0 0 0-2 2v2H4c-1.1 0-2 .9-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8c0-1.1-.9-2-2-2zM10 4h4v2h-4V4zm10 16H4V8h16v12z"/></svg>
-        PORTFOLIO
-      </a>
+      <div>
+        <a href="experience.html" class="portfolio-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 6h-4V4a2 2 0 0 0-2-2H10a2 2 0 0 0-2 2v2H4c-1.1 0-2 .9-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8c0-1.1-.9-2-2-2zM10 4h4v2h-4V4zm10 16H4V8h16v12z"/></svg>
+          PORTFOLIO
+        </a>
+        <a href="resume.html" class="portfolio-btn">
+          <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect x="8" y="4" width="48" height="56" rx="4" fill="none" stroke="white" stroke-width="2"/>
+            <circle cx="32" cy="20" r="6" fill="none" stroke="white" stroke-width="2"/>
+            <rect x="20" y="32" width="24" height="4" rx="2" fill="white"/>
+            <rect x="16" y="40" width="32" height="4" rx="2" fill="white"/>
+            <rect x="16" y="48" width="28" height="4" rx="2" fill="white"/>
+          </svg>
+          RESUME
+        </a>
+      </div>
     </div>
   </section>
 
